tests/semantic/type_system_records2/type_system_records2.dl
// Souffle - A Datalog Compiler
// Copyright (c) 2020, The Souffle Developers. All rights reserved
// Licensed under the Universal Permissive License v 1.0 as shown at:
// - https://opensource.org/licenses/UPL
// - <souffle root>/licenses/SOUFFLE-UPL.txt

//
// Correctness of anonymous records.
// issue #837.
//


.decl A(x:number)
A(1) :- [1,2] = [1].
A(2) :- [1,2] != [1].
A(3) :- [1,2] = [1, 2, "3"].
A(4) :- [1u,2] != [2.0, 3].
A(5) :- a = [1, 2], a = [b], b = [].
A(6) :- [1] != _.
.output A

